# moke

./: .env.tauri  .env.web  .gitignore  .gitmodules  .metadata  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_vx.x.x.md  SECURITY.md  mb.txt  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pubspec.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  typecheck-result.txt
.github/ISSUE_TEMPLATE/: 我要反馈问题.md  我需要帮助.md
.github/workflows/: build-android.yml  build-ios.yml  build-release.yml  codeql.yml
CODE_NEED/extensions/: DEVELOPMENT.md  PLAN.md  UNINSTALL-CLEANUP.md  installer-template.nsi
CODE_NEED/extensions/example-reading-stats/: README.md  build.bat  installer.nsi  manifest.json
CODE_NEED/talebook-client-desktop/: colors_and_type.css  talebook-client-desktop.design
CODE_NEED/talebook-client-desktop/pages/: admin-books.html  admin-booksources.html  admin-imports.html  admin-logs.html  admin-settings.html  admin-users.html  author-list.html  book-detail.html  book-edit.html  connect.html  format.html  hot.html  index.html  install.html  library.html  login.html  logout.html  meta-detail.html  nav.html  network-book.html  network-read.html  network.html  opds.html  publisher-list.html  rating.html  reader.html  readtxt.html  recent.html  scopedbooks.html  search.html  series.html  signup.html  tag-list.html  user-center.html  user-history.html  welcome.html
CODE_NEED/talebook-client-mobile/: colors_and_type.css  orchestration-summary.json  talebook-client-mobile.design
CODE_NEED/talebook-client-mobile-draft/: colors_and_type-draft.css  talebook-client-mobile-draft.design
CODE_NEED/talebook-client-mobile-draft/pages/: book-detail.html  connect.html  index.html  library.html  login.html  network.html  search.html  shelf.html  signup.html  user-center.html  welcome.html
CODE_NEED/talebook-client-mobile/pages/: admin-books.html  admin-booksources.html  admin-imports.html  admin-logs.html  admin-settings.html  admin-users.html  author-list.html  book-detail.html  book-edit.html  connect.html  format.html  hot.html  index.html  install.html  library.html  login.html  logout.html  meta-detail.html  nav.html  (+17 more)
CODE_NEED/talebook-desktop/: colors_and_type.css  talebook-desktop.design
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: api_response.dart  book.dart
lib/pages/: book_detail_page.dart  category_page.dart  home_page.dart  library_page.dart  login_page.dart  placeholder_page.dart  server_config_page.dart  signup_page.dart  welcome_page.dart
lib/providers/: auth_provider.dart
lib/routes/: app_router.dart
lib/services/: api_service.dart
lib/theme/: app_theme.dart
lib/widgets/: app_shell.dart  book_card.dart  book_cover.dart  book_cover_image.dart  error_message.dart  loading_indicator.dart  sidebar_widget.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
scripts/: dev.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/extensions/: api_server.rs  discovery.rs  events.rs  lifecycle.rs  mod.rs  permissions.rs  storage.rs
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: api.ts  debug-log.ts  offline-books.ts  utils.ts
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+45 files in other folders)
