[package]
name = "moke"
version = "0.1.0"
description = "Moke - Talebook Client"
authors = ["Moke"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "moke_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
