[package]
name = "moke"
version = "0.1.0"
description = "Moke - Talebook Client"
authors = ["Moke"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "moke_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
# 显式开启 cookies（跨请求持久化 session cookie，Talebook 登录/访问码依赖会话）
# 以及 dangerous-settings（允许前端按需放行自签名证书 / 纯 HTTP 局域网服务器）
tauri-plugin-http = { version = "2", features = ["cookies", "dangerous-settings"] }
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
